# noirtty-web

./: .gitignore  Cargo.toml  Makefile  PLAN-LOCAL-ECHO.md  PLAN-WEBTRANSPORT.md  README.md
.github/workflows/: ci.yml  release.yml
client/: Cargo.toml
client/src/: input.rs  lib.rs  terminal.rs  transport.rs
client/src/renderer/: canvas2d.rs  mod.rs
client/src/renderer/webgpu/: buffers.rs  mod.rs  pipeline.rs  shaders.wgsl
client/src/shaders/: terminal.wgsl
server/: Cargo.toml
server/src/: auth.rs  main.rs
static/: config.json  index.html  manifest.json  noirtty_web_client.d.ts  noirtty_web_client.js  noirtty_web_client_bg.wasm.d.ts
tests/: terminal_tests.rs
