[workspace]
members = ["server", "client"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.92"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rkyv = { version = "0.8", features = ["bytecheck"] }
bincode = "1.3"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Server: Web framework
axum = { version = "0.8", features = ["ws", "http2"] }
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip", "set-header"] }
tower = "0.5"

# Server: WebTransport / QUIC (HTTP/3)
web-transport-quinn = "0.11"
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"

# PTY management
portable-pty = "0.9"

# Terminal emulation
alacritty_terminal = "0.25"

# Text rendering (SDF fonts)
cosmic-text = "0.17"

# Client WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

# WebGPU
wgpu = "28.0"

# Window/event abstraction (web backend)
winit = { version = "0.30", features = ["rwh_06"] }

# Utilities
futures = "0.3"
uuid = { version = "1.7", features = ["v4"] }
dashmap = "6.0"
bytes = "1.5"
http = "1.0"
thiserror = "2.0"
anyhow = "1.0"

# Authentication (Passkey/WebAuthn)
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"
rand = "0.8"
base64 = "0.22"
url = "2.5"
gethostname = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release-wasm]
inherits = "release"
opt-level = "s"  # Optimize for size in WASM
